--- a/package.json
+++ b/package.json
@@ -4,5 +4,10 @@
   "description": "node shopify app",
   "main": "index.js",
   "author": "Dane Louis Bratz",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "axios": "^0.16.2",
+    "shopify-api-node": "^2.8.0",
+    "unescape": "^1.0.1"
+  }
 }
